almost done: 1. Remove redundant dependencies 2. Use evaluate instead of template.merge(I can't quite figure out why ClasspathResourceLoader doesn't work, So I read the template directly.)
Then you can see my bad English (Thanks to Google Translate)